Version 2.5.2
16-06-2015

[Updated] - Update resolve dependencies classes.


Version 2.5.1
14-06-2015

[Feature] - Added check repositories ChangeLog.txt with command 
			"slpkg --check [repo]".

[updated] - Fix argument typo.

Version 2.5.0
12-06-2015

[Feature] - Added full support Slackware command installpkg, upgradepkg and
            removepkg with all options. Option '--reinstall' merged into 
            '--upgradepkg'.
		  - Added print installed version.
		  - Added check dependency of package if used before remove.
		  - Added msb (mate) in default repositories.
		  - Added update or upgrade specifically repositories.

[Updated] - Fix 'slonly' repopsitory ChangeLog.txt link.
          - Selection foo.pkg removed instead you can use a variable ambient 
            as: pkgs="pip brasero pylint" and then '# slpkg -s sbo $pkgs'.
		  - Fix resolve binary dependencies.
		  - Update repository slackers.it mirror.
		  - Fix ignore "sbo" repository if not activated.

Version 2.4.4
10-06-2015

[Updated] - Fix AttributeError: 'Update' object has no attribute 'meta'
            when try update repositories.

Version 2.4.3
10-06-2015

[Feature] - Added long options.

[Updated] - Usage help message.
          - Bash and fish completion.
          - Man page.
          - Configuration file.

Version 2.4.2
04-06-2015

[Updated] - BugFix TypeError: repo_data() function.
          - Update sbo version compare.
          - Fix code style.


Version 2.4.1
04-06-2015

[Feature] - Added option to upgrade only the distribution packages installed.
          - Added option to on/off resolve dependencies.

[Updated] - Fixed upgrade packages.
          - Fixed checksum on/off.
          - Fixed upgrade Slackware binary packages resolve dependencies.


Version 2.4.0
02-06-2015

[Updated] - Updated comments arguments to '--help' option.

[Feature] - Added additional option to skip packages when upgrading.

Version 2.3.6
30-05-2015
