@@ -107,7 +107,8 @@ package from source quickly and easy.
 \fBslpkg\fP \fB-b\fP <\fIname of packages\fP> \fB--add\fP, \fB--remove\fP, \fBlist\fP
 .PP
 Add, remove or listed packages from blacklist file. The settings here affect 
-all repositories.
+all repositories. Remove all packages from blacklist use argument "ALL" for package 
+like "# slpkg -b ALL --remove".
 
 .SS -q, --queue, add, remove, view packages in queue
 \fBslpkg\fP \fB-q\fP <\fInames of packages\fP> \fB--add\fP, \fB--remove\fP
