@@ -284,10 +284,13 @@ class ArgParse(object):
             blacklist.listed()
         elif (len(self.args) > 2 and self.args[0] in options and
                 self.args[-1] == flag[0]):
-            blacklist.add(self.args[1:])
+            blacklist.add(self.args[1:-1])
+        elif (len(self.args) == 3 and self.args[0] in options and
+                self.args[1] == "ALL" and self.args[-1] == flag[1]):
+            blacklist.remove(blacklist.packages())
         elif (len(self.args) > 2 and self.args[0] in options and
                 self.args[-1] == flag[1]):
-            blacklist.remove(self.args[1:])
+            blacklist.remove(self.args[1:-1])
         else:
             usage("")
 
